# try-bot

./: .env.example  .gitignore  Cargo.toml  README.md  deny.toml  project.json  rustfmt.toml
.cargo/: audit.toml
.github/workflows/: ci.yml
doc/: analisis-paper-trade.md  analisis-trading-bot.md  fix-checklist.md  solusi-trading-bot.md
src/: main.rs  state.rs  telegram.rs
src/analytics/: engine.rs  mod.rs
src/broker/: simulator.rs
src/config/: mod.rs
src/core/: events.rs  types.rs
src/engine/: dispatcher.rs  dynamic_config.rs  filter_engine.rs  market_context.rs  mod.rs  rolling_stats.rs  simulation_engine.rs
src/queue/: event_queue.rs
src/storage/: batch_worker.rs  db.rs  mod.rs
src/strategy/: builder.rs  instance.rs  mod.rs
src/strategy/exit/: fixed_tp_sl.rs  mod.rs  trailing_tp_sl.rs
src/strategy/filter/: blackout.rs  buyers.rs  liquidity.rs  mod.rs  regime.rs  score.rs  spike.rs  velocity.rs  volume.rs
src/stream/: mod.rs  pumpfun_listener.rs
src/tracker/: mod.rs
src/wallet/: mod.rs
